# centaurus

./: .gitignore  Cargo.toml  README.md  devenv.nix  renovate.json
.github/workflows/: checks.yml  feature-check.yml  release.yml  tests.yml
centaurus/: CHANGELOG.md  Cargo.toml  README.md  build.rs
centaurus-derive/: CHANGELOG.md  Cargo.toml  README.md
centaurus-derive/src/: config.rs  lib.rs  settings.rs  update_message.rs
centaurus-macro-utils/: CHANGELOG.md  Cargo.toml  README.md
centaurus-macro-utils/src/: lib.rs
centaurus/src/: config.rs  error.rs  gravatar.rs  lib.rs  logging.rs  mail.rs  serde.rs  storage.rs
centaurus/src/auth/: mod.rs  pw.rs  settings.rs
centaurus/src/backend/: config.rs  cors.rs  frontend.rs  group.rs  init.rs  logging.rs  metrics.rs  mod.rs  proxy.rs  res.rs  router.rs  settings.rs  setup.rs  version.rs
centaurus/src/backend/auth/: config.rs  jwt.rs  jwt_auth.rs  jwt_state.rs  logout.rs  mod.rs  oidc.rs  password.rs  permission.rs  pw_state.rs  settings.rs  test_token.rs
centaurus/src/backend/endpoints/: group.rs  health.rs  integration_tests.rs  mod.rs  settings.rs  setup.rs
centaurus/src/backend/endpoints/mail/: mod.rs  reset.rs  state.rs  template.rs  test.rs
centaurus/src/backend/endpoints/user/: account.rs  email.rs  info.rs  management.rs  mod.rs  template.rs
centaurus/src/backend/endpoints/websocket/: mod.rs  state.rs  updater.rs
centaurus/src/backend/mail/: reset.rs  test.rs
centaurus/src/backend/middleware/: cors.rs  logging.rs  metrics.rs  mod.rs  version.rs
centaurus/src/backend/request/: extract.rs  header.rs  mod.rs  redirect.rs  response.rs  xml.rs
centaurus/src/backend/rewrite/: frontend.rs  mod.rs  proxy.rs  virtual_host.rs
centaurus/src/backend/user/: account.rs  info.rs  management.rs  mod.rs
centaurus/src/backend/websocket/: mod.rs  state.rs  updater.rs
centaurus/src/db/: config.rs  init.rs  mod.rs  settings.rs
centaurus/src/db/entities/: group.rs  group_permission.rs  group_user.rs  invalid_jwt.rs  key.rs  mod.rs  settings.rs  setup.rs  user.rs  user_avatar.rs
centaurus/src/db/migrations/: 3_user.rs  groups.rs  invalid_jwt.rs  m0_key.rs  m3_user.rs  m4_groups.rs  m5_setup.rs  mod.rs  settings.rs  user.rs
centaurus/src/db/tables/: group.rs  invalid_jwt.rs  key.rs  mod.rs  settings.rs  setup.rs  user.rs
centaurus/src/file/: macros.rs
centaurus/src/init/: axum.rs  cors.rs  frontend.rs  logging.rs  metrics.rs  mod.rs  router.rs
centaurus/src/req/: mod.rs  redirect.rs  xml.rs
centaurus/src/state/: extract.rs  macros.rs  mod.rs
