[package]
name = "centaurus-derive"
version = "0.1.3"
edition = "2024"
description = "A utility library for various use cases."
readme = "README.md"
repository = "https://github.com/Profiidev/centaurus"
license = "MIT OR Apache-2.0"
keywords = []
categories = []
exclude = ["CHANGELOG.md"]

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
centaurus-macro-utils = { workspace = true }
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }

[features]
metrics = []
site = []
