[package]
name = "centaurus-macro-utils"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Macro utilities for the centaurus"
repository = "https://github.com/Profiidev/centaurus"
categories = []
exclude = ["CHANGELOG.md"]
keywords = []
readme = "README.md"

[dependencies]
syn = { version = "2.0.117", features = ["full"] }
toml_edit = { version = "0.25.10", default-features = false, features = ["parse"] }
