[package]
name = "centaurus-macro-utils"
version = "0.1.2"
edition = "2024"
description = "Macro utilities for the centaurus"
readme = "README.md"
repository = "https://github.com/Profiidev/centaurus"
license = "MIT OR Apache-2.0"
keywords = []
categories = []
exclude = ["CHANGELOG.md"]

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0.117", features = ["full"] }
toml_edit = { version = "^0.25.0", default-features = false, features = [
  "parse",
] }

[dev-dependencies]
quote = "1.0.45"
