[package]
name = "centaurus"
version = "0.4.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A utility library for various use cases."
repository = "https://github.com/Profiidev/centaurus"
categories = []
exclude = ["CHANGELOG.md"]
keywords = []
readme = "README.md"

[features]
default = ["axum", "logging", "metrics"]
all = [
  "logging",
  "axum",
  "argon2",
  "base64",
  "chrono",
  "hmac",
  "http",
  "jsonwebtoken",
  "rsa",
  "sea-orm",
  "tokio",
  "uuid",
  "reqwest",
  "metrics",
  "error",
  "auth",
  "k8s",
  "docker",
]

logging = [
  "dep:color-eyre",
  "dep:tracing-error",
  "dep:tracing-subscriber",
  "dep:tracing",
  "serde",
]
axum = [
  "http",
  "tokio",
  "dep:axum",
  "dep:tower-http",
  "dep:tower",
  "dep:axum-extra",
  "error",
  "dep:serde-xml-rs",
  "dep:serde_json",
  "serde",
  "dep:thiserror",
  "dep:async-trait",
]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
error = ["dep:eyre"]
sea-orm = ["dep:sea-orm", "dep:tracing", "dep:sea-orm-migration", "serde"]
auth = ["argon2", "base64", "error", "rsa"]
serde = ["dep:serde"]
k8s = ["dep:k8s-openapi", "dep:kube"]
docker = ["dep:bollard"]

argon2 = ["dep:argon2"]
base64 = ["dep:base64"]
chrono = ["dep:chrono"]
hmac = ["dep:hmac"]
http = ["dep:http"]
jsonwebtoken = ["dep:jsonwebtoken"]
rsa = ["dep:rsa"]
tokio = ["dep:tokio"]
uuid = ["dep:uuid"]
reqwest = ["dep:reqwest"]
lettre = ["dep:lettre"]
webauthn = ["dep:webauthn-rs-core"]
image = ["dep:image"]

[dependencies]
centaurus-derive = { workspace = true }
axum = { version = "0.8.4", optional = true, features = [
  "multipart",
  "macros",
  "ws",
  "tracing",
] }
axum-extra = { version = "0.10.1", optional = true, features = [
  "typed-header",
  "cookie",
] }
tracing = { version = "0.1.41", optional = true, features = ["std"] }
tracing-subscriber = { version = "=0.3.19", optional = true }
eyre = { version = "0.6.12", optional = true }
hmac = { version = "0.12.1", optional = true }
chrono = { version = "0.4.42", optional = true, features = ["serde"] }
serde-xml-rs = { version = "0.8.1", optional = true }
http = { version = "1.3.1", optional = true }
argon2 = { version = "0.5.3", optional = true, features = ["std"] }
base64 = { version = "0.22.1", optional = true }
jsonwebtoken = { version = "10.0.0", optional = true, features = [
  "rust_crypto",
] }
rsa = { version = "0.9.8", optional = true }
sea-orm = { version = "1.1.16", optional = true, features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
color-eyre = { version = "0.6.5", optional = true }
tracing-error = { version = "0.2.1", optional = true }
tower-http = { version = "0.6.6", optional = true, features = [
  "trace",
  "cors",
] }
tokio = { version = "1.47.1", features = ["full"], optional = true }
tower = { version = "0.5.2", optional = true }
thiserror = { version = "2.0.16", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
uuid = { version = "1.18.1", optional = true }
reqwest = { version = "0.12.23", optional = true, features = [
  "http2",
  "system-proxy",
  "charset",
  "rustls-tls",
], default-features = false }
metrics-exporter-prometheus = { version = "0.17.2", optional = true, default-features = false }
metrics = { version = "0.24.2", optional = true }
sea-orm-migration = { version = "1.1.17", optional = true }
lettre = { version = "0.11.19", default-features = false, optional = true }
webauthn-rs-core = { version = "0.5.3", default-features = false, optional = true }
image = { version = "0.25.8", default-features = false, optional = true }
kube = { version = "2.0.1", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.26.0", features = [
  "latest",
  "schemars",
], optional = true }
async-trait = { version = "0.1.89", optional = true }
bollard = { version = "0.19.4", optional = true, default-features = false }

[lib]
path = "src/lib.rs"
